--- a/code/index.html
+++ b/code/index.html
@@ -51,7 +51,7 @@
         <div data-name="search"><span class="iconfont icon-search"></span><span>搜索</span></div>
     </footer>
 
-    <script src="https://cdn.bootcss.com/jquery/2.0.0/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="js/douban.js"></script>
 </body>
 </html>
