--- a/code/index.html
+++ b/code/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/douban.css">
     <link rel="stylesheet" href="font/iconfont.css">
+    <link rel="stylesheet" href="css/shipei.css">
 </head>
 <body>
     <main>
